@@ -4,7 +4,8 @@ Changelog
 1.6 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- We can set body content_type in send_mail.
+  [thomasdesvenain]
 
 
 1.5 (2013-09-18)
